--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
-!.yarn/sdks
+# !.yarn/sdks
 !.yarn/versions
 
 # Swap the comments on the following lines if you wish to use zero-installs
