--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "vue-passport-login",
   "packageManager": "yarn@4.1.1",
+  "scripts": {
+    "build": "node ./scripts/build.mjs --client-directory=workspaces/client --server-directory=workspaces/server --build-directory=build",
+    "start": "cd ./build && node ./index.js"
+  },
   "workspaces": [
     "./workspaces/*"
   ],
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.22.0",
+    "execa": "^8.0.1",
     "typescript": "^5.3.3"
   }
 }
