--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "packageManager": "yarn@4.1.1",
   "scripts": {
-    "build": "rimraf ./dist && tsc --build tsconfig.json",
+    "build": "rimraf ./dist && tsc --build tsconfig.json && tsconfig-replace-paths tsconfig.json",
     "start": "node ./dist/index.js"
   },
   "devDependencies": {
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "rimraf": "^5.0.5",
+    "tsconfig-replace-paths": "^0.0.14",
     "typescript": "^5.3.3"
   },
   "dependencies": {
