--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -9,7 +9,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "rimraf": "^5.0.5",
     "tsconfig-replace-paths": "^0.0.14",
     "typescript": "^5.3.3"
@@ -19,6 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   }
