--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -12,6 +12,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
     "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "rimraf": "^5.0.5",
     "tsconfig-replace-paths": "^0.0.14",
@@ -24,6 +25,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
